# ai-news-aggregator

./: README.md  pyproject.toml
.claude/: settings.local.json
app/: example.env  runner.py
app/database/: create_tables.py
app/scrapers/: youtube.py
