[project]
name = "ai-news-aggregator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "docling>=2.89.0",
    "feedparser>=6.0.12",
    "ipykernel>=7.2.0",
    "markdown>=3.10.2",
    "markdownify>=1.2.2",
    "openai>=2.31.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.13.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "sqlalchemy>=2.0.49",
    "youtube-transcript-api>=1.2.4",
]
